@@ -112,8 +112,6 @@ public class SkewedPartitioner extends Partitioner<PigNullableWritable, Writable
     @Override
     public void setConf(Configuration job) {
         conf = job;
-        PigMapReduce.sJobConfInternal.set(conf);
-        PigMapReduce.sJobConf = conf;
     }
 
     @Override
